<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <!-- Funções no Organismo -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title_funcoes_vitamina_e"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_funcoes_no_organismo"
                android:textSize="@dimen/text_title"
                android:textColor="@color/title_primary"
                android:layout_margin="@dimen/activity_horizontal_margin"
                />
            <TextView
                android:id="@+id/text_funcoes_vitamina_e"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_funcoes_no_organismo_vitamina_e"
                android:textSize="@dimen/text_info"
                android:textColor="@color/txt_info"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                />
        </LinearLayout>

        <!-- Problemas -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title_problemas_vitamina_e"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_problemas"
                android:textSize="@dimen/text_title"
                android:textColor="@color/title_primary"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                />
            <TextView
                android:id="@+id/text_avitaminoses_vitamina_e"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_avitaminoses"
                android:textSize="@dimen/text_info"
                android:textColor="@color/title_secundary"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                />
            <TextView
                android:id="@+id/text_problemas_vitamina_e"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_problemas_avitaminoses_e"
                android:textSize="@dimen/text_info"
                android:textColor="@color/txt_info"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                />
        </LinearLayout>

        <!-- Fontes -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title_fontes_vitamina_e"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_fontes"
                android:textSize="@dimen/text_title"
                android:textColor="@color/title_primary"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                />

            <TextView
                android:id="@+id/title_frutas_vitamina_e"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_sementes_oleos_vegetais"
                android:textSize="@dimen/text_info"
                android:textColor="@color/title_secundary"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                />

            <!-- Frutas -->
            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnCount="2"
                >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    >

                    <ImageView
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:src="@drawable/oleo_de_girassol"
                        />
                    <TextView
                        android:id="@+id/text_sementes_oleos_vegetais_girassol"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_oleo_girassol"
                        android:textSize="@dimen/text_info"
                        android:textColor="@color/txt_info"
                        android:layout_gravity="center_horizontal"
                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginRight="@dimen/activity_horizontal_margin" >

                    <ImageView
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:src="@drawable/nozes"
                        />
                    <TextView
                        android:id="@+id/text_sementes_oleos_vegetais_nozes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_nozes"
                        android:textSize="@dimen/text_info"
                        android:textColor="@color/txt_info"
                        android:layout_gravity="center_horizontal"
                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginRight="@dimen/activity_horizontal_margin" >

                    <ImageView
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:src="@drawable/germe_trigo"
                        />
                    <TextView
                        android:id="@+id/text_sementes_oleos_vegetais_amendoim"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_germe_trigo"
                        android:textSize="@dimen/text_info"
                        android:textColor="@color/txt_info"
                        android:layout_gravity="center_horizontal"
                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:layout_marginBottom="@dimen/activity_horizontal_margin" >

                    <ImageView
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:src="@drawable/amendoim"
                        />
                    <TextView
                        android:id="@+id/text_sementes_oleos_vegetais_germe_trigo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_amendoim"
                        android:textSize="@dimen/text_info"
                        android:textColor="@color/txt_info"
                        android:layout_gravity="center_horizontal"
                        />
                </LinearLayout>
            </GridLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>